# cso2-leet-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Dockerfile  Dockerfile.clang  README.md
.builds/: alpine-gcc.yaml
headers/: activesessions.hpp  bufferbuilder.hpp  bufferview.hpp  clientsession.hpp  clientsession_shared.hpp  globals.hpp  handlers.hpp  holepunchserver.hpp  packetlogger.hpp  platform.hpp  serveroptions.hpp
headers/buffer/: dynamicbuffer.hpp  staticbuffer.hpp  view.hpp
headers/cso2/: buymenu.hpp  clientmessages.hpp  localized.hpp  takedamageinfo.hpp  user.hpp  vector.hpp
headers/generic/: pingable.hpp
headers/holepunch/: inpacket.hpp  outpacket.hpp  shared.hpp
headers/packets/: chatshared.hpp  customshared.hpp  id.hpp  roomshared.hpp  userinfoshared.hpp  userprofileshared.hpp  view.hpp
headers/packets/in/: achievement.hpp  chat.hpp  host.hpp  option.hpp  room.hpp  version.hpp
headers/packets/in/favorite/: setcosmetics.hpp  setloadout.hpp
headers/packets/in/host/: changeteam.hpp  itemused.hpp  onplayerbuyitem.hpp  onplayerkilled.hpp  onplayerspawn.hpp
headers/packets/in/room/: newroom.hpp  setteam.hpp
headers/packets/in/userprofile/: setavatar.hpp  updatecampaign.hpp
headers/room/: channelgroup.hpp  match.hpp  room.hpp  shared.hpp  slot.hpp
headers/services/: userservice.hpp
headers/system/: l10n.hpp
headers/util/: fs.hpp  json_conv.hpp  randomstring.hpp
sources/: activesessions.cpp  clientsession.cpp  holepunchserver.cpp  main.cpp  packetlogger.cpp  serverinstance.cpp
sources/buffer/: dynamicbuffer.cpp  staticbuffer.cpp  view.cpp
sources/channel/: channel.cpp  channelgroup.cpp  channelstorage.cpp
sources/cso2/: inventory.cpp  user.cpp
sources/handlers/: achievementhandler.cpp  chathandler.cpp  hosthandler.cpp  loginhandler.cpp  optionhandler.cpp  roomhandler.cpp
sources/holepunch/: inpacket.cpp  outpacket.cpp
sources/holepunch/inpacket/: forward.cpp  punch.cpp
sources/packets/: view.cpp
sources/packets/in/: achievement.cpp  chat.cpp  host.cpp  room.cpp
sources/packets/in/favorite/: setcosmetics.cpp
sources/packets/in/host/: changeteam.cpp  itemused.cpp  onplayerkilled.cpp  onplayerscored.cpp  onplayerspawn.cpp  onroundend.cpp
sources/packets/in/option/: setbuymenu.cpp
sources/packets/in/room/: joinrequest.cpp  setteam.cpp  updatesettings.cpp
sources/packets/in/userprofile/: setavatar.cpp  settitle.cpp
sources/platform/: win32.cpp
sources/room/: room.cpp  slot.cpp
sources/services/: userservice.cpp
sources/util/: log.cpp
src/: activesessions.cpp  activesessions.hpp  clientsession.cpp  clientsession.hpp  cmdparser.cpp  cmdparser.hpp  holepunchserver.hpp  main.cpp  packetlogger.cpp  packetlogger.hpp  server.cpp  serverinstance.cpp  serverinstance.hpp  serveroptions.hpp
src/buffer/: dynamicbuffer.cpp  staticbuffer.hpp
src/channel/: channel.hpp  channelgroup.cpp  channelgroup.hpp  channelstorage.cpp  channelstorage.hpp  shared.cpp  shared.hpp
src/cso2/: buymenu.cpp  buymenu.hpp  cosmetics.cpp  cosmetics.hpp  definitions.cpp  definitions.hpp  inventory.cpp  inventory.hpp  loadout.cpp  loadout.hpp  shared.hpp  unlocktypes.hpp  user.cpp  user.hpp
src/handlers/: channelhandler.cpp  favoritehandler.cpp  hosthandler.cpp  loginhandler.cpp  userprofilehandler.cpp  versionhandler.cpp
src/holepunch/: inpacket.hpp  outpacket.hpp  shared.hpp
src/holepunch/inpacket/: forward.hpp  punch.hpp
src/packets/: achievementshared.cpp  achievementshared.hpp  builder.cpp  builder.hpp  favoriteshared.hpp  hostshared.hpp  optionshared.hpp  shopshared.hpp  userinfoshared.cpp
src/packets/in/: favorite.cpp  favorite.hpp  login.hpp  option.cpp  requestroomlist.cpp  requestroomlist.hpp  userprofile.cpp  userprofile.hpp
src/packets/in/achievement/: campaign.cpp  campaign.hpp
src/packets/in/favorite/: setloadout.cpp
src/packets/in/host/: onplayerbuyitem.cpp  onplayerscored.hpp  onroundend.hpp  setinvobj.cpp  setinvobj.hpp
src/packets/in/option/: setbuymenu.hpp
src/packets/in/room/: countdown.cpp  countdown.hpp  joinrequest.hpp  newroom.cpp  updatesettings.hpp
src/packets/in/userprofile/: setsignature.cpp  setsignature.hpp  settitle.hpp  updatecampaign.cpp
src/platform/: unix.cpp
src/room/: channel.hpp  room.cpp  settings.cpp  settings.hpp  slot.hpp
src/services/: userservice.cpp  userservice.hpp
src/system/: dialogbox.cpp  dialogbox.hpp
src/util/: binary.hpp  json_fwd.hpp  log.cpp  log.hpp  number.hpp  randomstring.cpp  randomstring.hpp
tests/: CMakeLists.txt
tests/headers/: clientconnection.hpp  wait_util.hpp
tests/sources/: clientconnection.cpp  test_serverinstance.cpp
